# stateform

./: .gitignore  Cargo.toml  README.md  docker-compose.monitoring.yml  go.work  go.work.sum  prometheus.yml
control-plane/: go.mod  go.sum  stateform-gateway.json
control-plane/cmd/control-plane/: main.go
control-plane/internal/admin/: server.go
control-plane/internal/config/: loader.go
control-plane/internal/grpc/: server.go
control-plane/internal/k8s/: informer.go  watcher.go
control-plane/proto/: control_plane.proto  gateway.proto
control-plane/proto/v1/: control_plane.pb.go  control_plane_grpc.pb.go
crates/gateway-auth/: Cargo.toml
crates/gateway-auth/src/: api_key.rs  context.rs  error.rs  jwt.rs  lib.rs  mtls.rs  pipeline.rs
crates/gateway-cache/: Cargo.toml
crates/gateway-cache/src/: cache.rs  control.rs  entry.rs  error.rs  key.rs  l1_local.rs  l2_redis.rs  lib.rs
crates/gateway-config/: Cargo.toml
crates/gateway-config/src/: error.rs  lib.rs  schema.rs  validation.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: concurrency.rs  error.rs  health.rs  lib.rs  pipeline.rs  server.rs  shutdown.rs  tls.rs  upstream.rs
crates/gateway-lb/: Cargo.toml
crates/gateway-lb/src/: lib.rs
crates/gateway-metrics/: Cargo.toml
crates/gateway-metrics/src/: error.rs  lib.rs  recorder.rs  registry.rs  server.rs
crates/gateway-proxy/: Cargo.toml
crates/gateway-proxy/src/: main.rs
crates/gateway-ratelimit/: Cargo.toml
crates/gateway-ratelimit/src/: error.rs  key.rs  l1_local.rs  l2_redis.rs  lib.rs  limiter.rs
crates/gateway-router/: Cargo.toml
crates/gateway-router/src/: error.rs  lib.rs  matched.rs  predicate.rs  router.rs  trie.rs
files/: Cargo.toml  config.yaml  hot_reload.rs
