[package]
name    = "gateway-cache"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace      = true
tracing.workspace    = true
anyhow.workspace     = true
thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
http.workspace       = true
bytes.workspace      = true
dashmap.workspace    = true
redis.workspace      = true
serde_bytes.workspace = true
gateway-config = { path = "../gateway-config" }
