[package]
name    = "gateway-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace      = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace  = true
anyhow.workspace     = true
arc-swap.workspace   = true
regex.workspace      = true
tokio.workspace      = true
tracing.workspace    = true
