[package]
name    = "gateway-proxy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gateway-proxy"
path = "src/main.rs"

[dependencies]
tokio.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true
anyhow.workspace             = true
gateway-config = { path = "../gateway-config" }
gateway-core   = { path = "../gateway-core" }
