[package]
name    = "gateway-router"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace       = true
http.workspace        = true
tracing.workspace     = true
anyhow.workspace      = true
thiserror.workspace   = true
arc-swap.workspace    = true
regex.workspace       = true
gateway-config = { path = "../gateway-config" }
